# DockerPrioQueue

./: Dockerfile  README.md  input.txt  jobClass.py  main.py  queue_1.py  requirements.txt  test.py
Project/: Dockerfile  pyproject.toml
Project/src/: main.py  queueAPI.py  queue_1.py
src/: Dockerfile  docker-compose.yml  jobClass.py  main.py  queueAPI.py  queue_1.py  test.py
src/testingFlask/: testAPI.py  tester.py
