[tool.poetry]
name = "PriorityQueue-UsingFlaskApi"
version = "0.1.0"
description = ""
authors = ["Devinevangelista <devinevang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"
flask-restful = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
